# jailguard

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  requirements.txt
.github/workflows/: ci.yml  publish-js.yml  publish-python.yml
app/: auth.py  main.py  session.py
app/routers/: analyze.py
benchmarks/: calibrate.py  evaluate.py  export_onnx.py
data/: download_datasets.py  prepare.py
docs/: api-reference.md  deployment.md  pricing.md
inference/: attack_head.joblib  calibration.json  predict.py
infra/: app.py  cdk.json  jailguard_stack.py  requirements.txt
model/: train.py  train_attack_head.py
sdk/js/: jailguard.d.ts  jailguard.js  package.json
sdk/python/: README.md  jailguard.py  pyproject.toml
tests/: test_api.py
