[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jailguard"
version = "1.0.0"
description = "Python SDK for the JailGuard jailbreak detection API"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Yash", email = "kalrayashpreet@gmail.com" }]
keywords = ["jailbreak", "ai-safety", "llm", "moderation", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
]
requires-python = ">=3.9"
dependencies = ["httpx>=0.24.0"]

[project.urls]
Homepage = "https://github.com/Yash-001100/jailguard"
Documentation = "https://github.com/Yash-001100/jailguard#readme"
Repository = "https://github.com/Yash-001100/jailguard"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["jailguard.py"]
